syntax = "proto3";

package template;

import "google/api/annotations.proto";

option go_package = "https://github.com/tredoc/go-messaging-platform/pb";

enum TemplateType {
  SMS = 0;
  EMAIL = 1;
}

service TemplateService {
  rpc CreateTemplate(CreateTemplateRequest) returns (CreateTemplateResponse) {
    option (google.api.http) = {
      post: "/templates"
      body: "*"
    };
  }

  rpc GetTemplateByID(GetTemplateByIDRequest) returns (GetTemplateByIDResponse) {
    option (google.api.http) = {
      get: "/templates/{id}"
    };
  }

  rpc DeleteTemplateByID(DeleteTemplateByIDRequest) returns (DeleteTemplateByIDResponse) {
    option (google.api.http) = {
      delete: "/templates/{id}"
    };
  }
}

message CreateTemplateRequest {
  string template = 1;
  TemplateType type = 2;
}

message CreateTemplateResponse {
  string id = 1;
}

message GetTemplateByIDRequest {
  string id = 1;
}

message GetTemplateByIDResponse {
  string name = 1;
}

message DeleteTemplateByIDRequest {
  string id = 1;
}

message DeleteTemplateByIDResponse {
  string id = 1;
}